wip: death Handler Refactor